# MU5MAM30

./: CMakeLists.txt  README.md  configure.sh  imgui.ini
Projects/: projects_2024.tex
Students/: readme.txt
Students/Anthony Pouillard/: TP1.cpp
Students/Blondy/include/common/: array.h
Students/Blondy/include/fem/: P1.h  fem_matrix.h
Students/Blondy/include/linalg/: conjugate_gradient.h  matrix.h  tiny_blas.h
Students/Blondy/include/mesh/: mesh.h  mesh_gpu.h
Students/Blondy/include/viewer/: camera.h  frustum.h  gui_app.h
Students/Crispo/: tp1.cpp
Students/Gentile/: test  test.c
Students/Marzo/: test  test.c
Students/Richard/: test.txt
Students/Rosi/: Makefile  test.cpp  tp1.cpp
Students/Rosi/include/: P1.h  adjacency.h  array.h  cholesky.h  conj_gradient.h  fem_matrix.h  math_utils.h  my_mesh.h  skyline.h  sparse_matrix.h
Students/Rosi/run/: Euler.cpp  Poisson.cpp  tp1.cpp
Students/Rosi/src/: Euler.cpp  P1.cpp  adjacency.cpp  fem_matrix.cpp  my_mesh.cpp  prova  skyline.cpp  tp1  tp1.cpp
Students/Smets/: tp1.cpp
Students/ZHANG_HaoJun/: README.txt  tp1.cpp
Students/dongjiao/: TP1_C++.cpp
Students/fabrizzi/: test.c
Students/virelizier/MassStiff/: MassStiff.h
TP/: tp1.cpp
TP/.solutions/: tp1_sol.cpp
data/: readme.txt
glfw_3.4/lib/pkgconfig/: glfw3.pc
include/fem/: P1.h  euler2D.h  mass.h  navier_stokes.h  poisson.h  stiffness.h
include/linalg/: cholesky.h  conjugate_gradient.h  sparse_matrix.h  tiny_blas.h
include/matrix/: elimination_tree.h  fem_matrix.h  sparse_matrix.h
include/mesh/: adjacency.h  cube.h  mesh_bounds.h  mesh_gpu.h  mesh_io.h
include/viewer/: camera.h  frustum.h  mouse.h  ndc.h  shaders.h  trackball.h  viewer.h  viewer_app.h
shaders/: fem.frag  fem.vert
src/common/: chrono.cpp  logging.c  logging.cpp
src/fem/: P1.cpp  euler2D.cpp  fem_matrix.cpp  navier_stokes.cpp  poisson.cpp
src/linalg/: cholesky.cpp  conjugate_gradient.cpp  sparse_matrix.cpp
src/matrix/: elimination_tree.cpp  fem_matrix.cpp  spy.cpp
src/mesh/: adjacency.cpp  cube.cpp  cube2.cpp  duplicate_verts.cpp  mesh_adjacency.cpp  mesh_bounds.cpp  mesh_gpu.cpp  mesh_io.cpp  sphere.cpp
src/viewer/: camera.cpp  gui_app.cpp  mouse.cpp  shaders.cpp  trackball.cpp  viewer.cpp  viewer_app.cpp
